--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,28 @@
 {
-  "name": "backend",
-  "version": "0.0.0",
-  "private": true,
+  "name": "dashboard-backend",
+  "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo Not typescript yet",
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
-
+    "build": "npx tsc",
+    "start": "node ./dist/server.js",
+    "dev": "nodemon ./server.ts"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "cookie-parser": "^1.4.6",
+    "debug": "^4.3.4",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.0"
+    "@types/cookie-parser": "^1.4.6",
+    "@types/debug": "^4.1.12",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.11.20",
+    "eslint": "^8.57.0",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
