--- a/backend/package.json
+++ b/backend/package.json
@@ -9,13 +9,13 @@
     "dev": "nodemon ./server.ts"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.6",
+    "@kubernetes/client-node": "^0.20.0",
+    "axios": "^1.6.7",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.6",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
