Break out getting the latest into separate async calls, for responsiveness
Move the hub URL into a config file (adding a default config for folks that only want to use unauthenticated dockerhub as well as a sample/documentation one)

Authentication still isn't there, but it's coming along.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     command: ["npm", "run", "dev"]
     volumes:
       - ./k8s_files:/var/run/secrets/kubernetes.io/serviceaccount
+      - ./config.json:/dash/config.json
     env_file: "env.variables"
     ports:
       - "8080:3000"
