Convert to json syntax, because yaml is awful.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,26 @@
-version: '3'
-services:
-  dash:
-    build:
-      context: .
-      args:
-        - NODE_ENV=dev
-    command: ["npm", "run", "dev"]
-    volumes:
-      - ./k8s_files:/var/run/secrets/kubernetes.io/serviceaccount
-      - ./config.json:/dash/config.json
-    env_file: "env.variables"
-    ports:
-      - "8080:3000"
-
+{
+  "version": "3",
+  "services": {
+    "dash": {
+      "build": {
+        "context": ".",
+        "args": [
+          "NODE_ENV=dev"
+        ]
+      },
+      "command": [
+        "npm",
+        "run",
+        "dev"
+      ],
+      "volumes": [
+        "./k8s_files:/var/run/secrets/kubernetes.io/serviceaccount",
+        "./config.json:/dash/config.json"
+      ],
+      "env_file": "env.variables",
+      "ports": [
+        "8080:3000"
+      ]
+    }
+  }
+}
