Refactor our config a bit, for future growth.  My original format was very short-sighted.

--- a/sample_config.json
+++ b/sample_config.json
@@ -1,6 +1,8 @@
 {
   "!!Copy this file to backend/config.json, delete this line, and edit to match repositories you use": {},
-  "docker.io": {
-    "hub": "https://hub.docker.com/v2/"
+  "repositories": {
+    "docker.io": {
+      "hub": "https://hub.docker.com/v2/"
+    }
   }
 }
