A bunch of changes.  So many.
Reworked how we get docker version info entirely, which led to some rate limiting from docker.io, so that led to adding a redis layer.

Got rid of previous configuration, but added some new to manage extra links at the top of the page.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 {
   "version": "3",
   "services": {
+    "redis": {
+      "image": "redis:7.4.0",
+      "expose": [
+        "6379"
+      ]
+    },
     "dash": {
       "build": {
         "context": ".",
@@ -15,7 +21,7 @@
       ],
       "volumes": [
         "./k8s_files:/var/run/secrets/kubernetes.io/serviceaccount",
-        "./config.json:/dash/config.json"
+        "./config.json:/dash/frontend/config.json"
       ],
       "env_file": "env.variables",
       "ports": [
