--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,17 @@
     "axios": "^1.6.7",
     "debug": "^4.3.4",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "ioredis": "^5.4.1",
+    "morgan": "^1.10.0",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
+    "@types/ioredis": "^5.0.0",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.20",
+    "@types/redis": "^4.0.11",
     "eslint": "^8.57.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
